# proof-of-state

./: .gitignore  CITATION.cff  README.md  pyproject.toml
.github/workflows/: ci.yml  codeql.yml
examples/: proof_of_state.toml
src/proof_of_state/: __init__.py  bundle_io.py  chain.py  cli.py  models.py  runner.py  verifier.py
tests/: test_chain.py  test_cli.py  test_rollup.py  test_verify_falsifier.py
